--- a/RunGroops.Application/RunGroops.Application.csproj
+++ b/RunGroops.Application/RunGroops.Application.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.8" />
   </ItemGroup>
 
   <ItemGroup>
