--- a/RunGroops.Domain/RunGroops.Domain.csproj
+++ b/RunGroops.Domain/RunGroops.Domain.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.8" />
+  </ItemGroup>
+
 </Project>
