--- a/RunGroops.Infrastructure/RunGroops.Infrastructure.csproj
+++ b/RunGroops.Infrastructure/RunGroops.Infrastructure.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RunGroops.Application\RunGroops.Application.csproj" />
     <ProjectReference Include="..\RunGroops.Domain\RunGroops.Domain.csproj" />
   </ItemGroup>
 
